# apache-beam-examples

./: README.md
beam-mysql-java/: README  pom.xml  resolve-result.txt
beam-mysql-java/src/main/java/org/apache/beam/samples/: StarterPipeline.java
beam-postgres-java/: README  pom.xml
beam-postgres-java/src/main/java/org/apache/beam/samples/: StarterPipeline.java
beam-postgres-python/: README.md  pyproject.toml
beam-postgres-python/beam_postgres_python/: postgres_to_gcs.py
